# VocabTree2

VocabTreeOpenMVG/src/: CMakeLists.txt  VocabTree_OpenMVG.hpp  main_VocabBuildDB_openmvg.cpp  main_VocabLearnBuildDB_openmvg.cpp  main_VocabLearn_openmvg.cpp  main_VocabMatch_openmvg.cpp
